[package]
name = "convert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68" }
clap = "2"
