[package]
name = "fen_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release.build-override]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = "fat"

[dependencies]
chess = "*"
